--- a/DL_specialization/DL_and_NeuralNetwork/module2.ipynb
+++ b/DL_specialization/DL_and_NeuralNetwork/module2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7283431d",
+   "id": "5d6152ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "49d3d6cd",
+   "id": "6284ce6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4ac3d4ec",
+   "id": "9e710fc8",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dbff6d45",
+   "id": "b2c8fd33",
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,82 @@
     "print(c)\n",
     "print(\"For Loop Version: \" + str(1000*(toc-tic)) + \" ms\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b00003b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 56.    0.    4.4  68. ]\n",
+      " [  1.2 104.   52.    8. ]\n",
+      " [  1.8 135.   99.    0.9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.array([[56.0, 0.0, 4.4, 68.0], [1.2, 104.0, 52.0, 8.0], [1.8, 135.0, 99.0, 0.9]])\n",
+    "\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8820dce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 59.  239.  155.4  76.9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# axis = 0 sums vertically\n",
+    "cal = A.sum(axis=0)\n",
+    "print(cal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1ec59f29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[94.91525424,  0.        ,  2.83140283, 88.42652796],\n",
+       "       [ 2.03389831, 43.51464435, 33.46203346, 10.40312094],\n",
+       "       [ 3.05084746, 56.48535565, 63.70656371,  1.17035111]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentage = 100 * (A / cal.reshape(1,4))\n",
+    "percentage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2083d690",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
